<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LedDetailActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_led"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:background="@color/detailBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/led_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/nanummyeongjobold"
            android:text="@string/SmartFarm"
            android:textColor="@color/detailLogoText"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/led_backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="39dp"
            android:src="@drawable/ic_backbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/led_title_img"
            android:layout_width="337dp"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/led_title_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/led_title_txt" />

        <TextView
            android:id="@+id/LED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/nanumsquareac"
            android:text="LED"
            android:textColor="#fff"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="@+id/led_title_img"
            app:layout_constraintStart_toStartOf="@+id/led_title_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_led">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/led_state_title"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginStart="34dp"
                android:src="@drawable/led_state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/led_state_img"
                android:layout_width="113dp"
                android:layout_height="113dp"
                android:layout_marginStart="57dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/led_state_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/led_state_title" />

            <TextView
                android:id="@+id/led_state_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="75dp"
                android:fontFamily="@font/nanumsquareac"
                android:text="@string/ledState"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@id/led_state_img"
                app:layout_constraintTop_toBottomOf="@+id/led_state_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/nanumsquareac"
                android:text="@string/ledControl"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/led_state_img"
                app:layout_constraintTop_toBottomOf="@+id/led_state_txt" />

            <ImageView
                android:id="@+id/id_control_title"
                android:layout_width="45dp"
                android:layout_height="24dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="42dp"
                android:src="@drawable/led_control_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/led_state_img" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="69dp"
                android:layout_marginBottom="68dp"
                android:text="실행"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <NumberPicker
                android:id="@+id/led_onoffpicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="69dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_control_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>